# DaisyExamples

./: .gitignore  AGENTS.md  CHATGPT.md  CLAUDE.md  CODEX.md  Doxyfile  GEMINI.md  KILO.md  LATEST_PROJECTS.md  OPENCODE.md  README.md  advanced_daisy_functionalities.txt  daisy-embedded-developer-expert.md  helper.py  hydrasynth_ui_field_analysis.md
DaisyDAFX/: .gitignore  AGENTS2.md  AGENTS_v2.1.md  CHECKPOINT.md  CMakeLists.txt  README.md  dafx_bugs.md
DaisyDAFX/.github/workflows/: build.yml  release.yml
DaisyDAFX/DAFX-MATLAB/M_files_chap01/: dafx_chap01.txt  figure1_03.m
DaisyDAFX/directives/: port_dafx_to_daisysp.md
DaisyDAFX/docs/: DAFX_Analysis.xlsx  Phase1_Gate_Review_Signoff.md  final_report.md  performance_report.md
DaisyDAFX/docs/benchmarks/: 2026-06-05-dual-stft-results.json
DaisyDAFX/docs/reports/: 2026-06-05-dual-stft-implementation-report.md
DaisyDAFX/examples/: CMakeLists.txt  example_guitar_amp.cpp  example_modulation.cpp  example_parametric_eq.cpp
DaisyDAFX/examples/daisy_dual_stft/: Makefile  README.md  cmsis_bitreversal_32.c  daisy_dual_stft.cpp
DaisyDAFX/execution/: README.md  pyproject.toml
DaisyDAFX/execution/dafx_execution/: __init__.py
DaisyDAFX/execution/dafx_execution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
DaisyDAFX/plans/: 2026-06-05-dual-stft-implementation.md  completion_monitor.md
DaisyDAFX/plans/archive/: DAFX_DaisySP_Gap_Analysis.md  DAFX_DaisySP_Implementation_Plan.md  Phase1_Completion_Gate_Implementation_Plan.md  Phase1_Foundation_Action_Plan.md  Phase1_Remaining_Tasks_Execution_Plan.md  Phase2_Phase3_Parallel_Execution_Plan.md  Python_Execution_Scripts_Plan.md
DaisyDAFX/python_validation_infrastructure/: README.md  pyproject.toml
DaisyDAFX/src/analysis/: yin.h
DaisyDAFX/src/dynamics/: compressor_expander.h  noisegate.cpp  noisegate.h
DaisyDAFX/src/effects/: fdn_reverb.h  lp_iir_comb.h  sola_time_stretch.h  tonestack.cpp  tonestack.h  tube.cpp  tube.h  universal_comb.h  wahwah.cpp  wahwah.h
DaisyDAFX/src/filters/: highshelving.cpp  highshelving.h  lowshelving.cpp  lowshelving.h  peakfilter.cpp  peakfilter.h
DaisyDAFX/src/modulation/: ringmod.cpp  ringmod.h  vibrato.cpp  vibrato.h
DaisyDAFX/src/spatial/: crosstalk_canceller.h  stereopan.cpp  stereopan.h
DaisyDAFX/src/spectral/: dual_stft.h  phase_vocoder.h  robotization.h  spectral_filter.h  whisperization.h
DaisyDAFX/src/utility/: circularbuffer.h  envelopefollower.h  fft_handler.h  princarg.h  simple_hrir.h  windows.h  xcorr.h
DaisyDAFX/tests/: CMakeLists.txt  TEST_PATTERNS.md  run_tests.cmd  run_tests.sh  test_circularbuffer.cpp  test_compressor_expander.cpp  test_crosstalk_canceller.cpp  test_dual_stft.cpp  test_envelopefollower.cpp  test_fdn_reverb.cpp  test_fft_handler.cpp  test_highshelving.cpp  test_lowshelving.cpp  test_lp_iir_comb.cpp  test_noisegate.cpp  test_peakfilter.cpp  test_phase_vocoder.cpp  test_princarg.cpp  test_ringmod.cpp  test_robotization.cpp  test_sola.cpp  test_spectral_filter.cpp  test_stereopan.cpp  test_tonestack.cpp  test_tube.cpp  test_universal_comb.cpp  test_vibrato.cpp  test_wahwah.cpp  test_whisperization.cpp  test_windows.cpp  test_xcorr.cpp  test_yin.cpp
DaisyDAFX/tools/: capture_dual_stft_cpu.ps1  measure_dual_stft_field.ps1
DaisyHost/: AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CMakeLists.txt  FIELD_PROJECT_TRACKER.md  PROJECT_TRACKER.md  README.md  ROADMAP.d2  SKILL_PLAYBOOK.md  WORKSTREAM_TRACKER.md  build_host.cmd  build_host.ps1
DaisyHost/.claude/: settings.local.json
DaisyHost/.tmp/: session-summary-2026-04-25.md  session-summary-2026-04-26-2.md  session-summary-2026-04-26-3.md  session-summary-2026-04-26.md  subharmoniq_field_5_notes.json
DaisyHost/_Vault/: Architecture Map.md  README.md
DaisyHost/docs/: field-expansion-board-layout.html
DaisyHost/graphify-out/: .graphify_detect.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
DaisyHost/src/: AppRegistry.cpp  BoardControlMapping.cpp  BoardProfile.cpp  CliPayloads.cpp  ComputerKeyboardMidi.cpp  DaisyBraidsCore.cpp  DaisyCloudSeedCore.cpp  DaisyDelayFxCore.cpp  DaisyFieldRSPLayout.cpp  DaisyHarmoniqsCore.cpp  DaisyPolyOscCore.cpp  DaisySubharmoniqCore.cpp  DaisyVASynthCore.cpp  DoctorDiagnostics.cpp  EffectiveHostStateSnapshot.cpp  FieldOledTransient.cpp  GateDiagnostics.cpp  HostAutomationBridge.cpp  HostModulation.cpp  HostModulationUiText.cpp  HostSessionState.cpp  HostStartupPolicy.cpp  HubSupport.cpp  LiveRackTopology.cpp  MidiEventTracker.cpp  MidiLearnMap.cpp  MidiNotePreview.cpp  OledDisplayLayout.cpp  RenderAssertions.cpp  RenderRuntime.cpp  SignalGenerator.cpp  StandaloneUiPolicy.cpp  TestInputSignal.cpp  VersionInfo.cpp
DaisyHost/tests/: run_smoke.py  run_unit_test_payload.py  test_app_registry.cpp  test_board_control_mapping.cpp  test_board_profile.cpp  test_braids_core.cpp  test_cli_payloads.cpp  test_cloudseed_core.cpp  test_computer_keyboard_midi.cpp  test_daisy_braids_core.cpp  test_daisy_cloudseed_core.cpp  test_daisy_field_rsp_layout.cpp  test_daisy_harmoniqs_core.cpp  test_daisy_polyosc_core.cpp  test_daisy_vasynth_core.cpp  test_daisyhost_controller_firmware.py  test_daisyhost_plugin_processor.cpp  test_delay_fx_adaptation_core.cpp  test_doctor_diagnostics.cpp  test_effective_host_state_snapshot.cpp  test_field_adapter_generator.py  test_field_oled_transient.cpp  test_gate_diagnostics.cpp  test_harmoniqs_core.cpp  test_host_automation_bridge.cpp  test_host_modulation.cpp  test_host_session_state.cpp  test_host_startup_policy.cpp  test_hub_support.cpp  test_live_rack_topology.cpp  test_midi_event_tracker.cpp  test_midi_note_preview.cpp  test_multidelay_core.cpp  test_next_wp_suggester.py  test_parameter_parity.cpp  test_polyosc_core.cpp  test_render_assertions.cpp  test_render_runtime.cpp  test_signal_generator.cpp  test_standalone_ui_policy.cpp  (+5 more)
DaisyHost/tools/: audit_firmware_portability.py  cli_app.cpp  generate_field_adapter.py  render_app.cpp  suggest_next_wp.py  write_vst3_manifest.ps1
DaisyHost/training/: README.md  render_dataset.py
(+1019 files in other folders)
