[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validation-infrastructure"
version = "3.1.0"
description = "Comprehensive Python Validation Infrastructure with type checking, schema validation, and extensive validation tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Validation Infrastructure Team", email = "validation@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
keywords = ["validation", "schema", "pydantic", "type-checking", "data-validation"]

dependencies = [
    "pydantic>=2.0.0",
    "marshmallow>=3.20.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "jsonschema>=4.0.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "babel>=2.12.0",
    "cachetools>=5.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
all = [
    "validation-infrastructure[dev,docs]",
]

[project.scripts]
validate = "validation_infrastructure.cli:main"
valinfra = "validation_infrastructure.cli:main"

[project.urls]
Homepage = "https://github.com/example/validation-infrastructure"
Documentation = "https://validation-infrastructure.readthedocs.io"
Repository = "https://github.com/example/validation-infrastructure"
Issues = "https://github.com/example/validation-infrastructure/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"validation_infrastructure" = ["py.typed", "locales/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.coverage.run]
source = ["src/validation_infrastructure"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
